# openstudybuilder-solution

./: .gitignore  CHANGE-LOG.md  README.md  cdisc_api_mdr_contents_readme.txt  compose.yaml  database.Dockerfile  licenses.md
clinical-mdr-api/: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE.md  Pipfile  README.md  apiVersion  compose.dev.yaml  compose.yaml  generate_openapi.py  pyproject.toml  sbom.md
clinical-mdr-api/.claude/agents/: backend-refactoring-assistant.md  code-improvement-advisor.md  endpoint-implementation-specialist.md  neo4j-performance-analyzer.md  pr-code-reviewer.md
clinical-mdr-api/.claude/rules/: api-conventions.md  architecture.md  authentication.md  code-standards.md  commands.md  database.md  monitoring.md  project-overview.md  project-structure.md  testing.md
clinical-mdr-api/.git-hooks/: install-git-hooks.sh
clinical-mdr-api/.github/agents/: code-generator-consumer-api.agent.md  test-specialist-integration-api.agent.md
clinical-mdr-api/clinical_mdr_api/: main.py  pytest.ini
clinical-mdr-api/clinical_mdr_api/developer_tools/: networksimulator.py
clinical-mdr-api/clinical_mdr_api/domain_repositories/: data_completeness_tags_repository.py  generic_repository.py  library_item_repository.py  neomodel_ext_item_repository.py  preferences_registry.py  preferences_repository.py
clinical-mdr-api/clinical_mdr_api/domains/: _utils.py  enums.py  iso_languages.py
clinical-mdr-api/clinical_mdr_api/listings/: query_service.py
clinical-mdr-api/clinical_mdr_api/models/: data_completeness_tag.py  preferences.py  (+2 more)
clinical-mdr-api/common/: config.py  database.py  logger.py  neomodel.py  queries.py  utils.py
clinical-mdr-api/consumer_api/: consumer_api.py  openapi.json
clinical-mdr-api/doc/: Auth.md
clinical-mdr-api/extensions/: README.md  common.py  extensions_api.py
clinical-mdr-api/sblint/: sblinter.py
clinical-mdr-api/xml_stylesheets/: falcon.xsl  with-annotations.xsl
(+1182 files in other folders)
